PDFBOX-4658: revert changes from this issue
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/2.0@1880053 13f79535-47bb-0310-9956-ffa450edef68